Updated file path for background
Had to add ".." before "/media/" so that GitHub pages would find the image

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 
 body{
     /* background-color: black; */
-    background-image: url("/media/images/background_PD2.png");
+    background-image: url("../media/images/background_PD2.png");
     background-repeat: no-repeat;
     background-size: cover;
 
